design completed, need optimization

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -52,7 +52,7 @@
   <!--/ Intro Skew End /-->
 
   <section id="about" class="about-mf sect-pt4 route">
-    <div class="container">
+    <div class="container "> 
       <div class="row">
         <div class="col-sm-12">
           <div class="box-shadow-full">
@@ -126,21 +126,36 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
+                      <strong>I am a BSc. CSIT student currently studying in Eigth Semester.</strong>
                   </p>
+                  <hr>
                   <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                      <strong>Skilled in Python :</strong>
+                    <ul>
+                      <li>Working with Python for most of my major projects.</li>
+                      <li>Skilled in Django Framework for Web development.</li>
+                      <li>Intermediately skilled with tensorflow, kersa as well as numpy for machine learning projects.</li>
+                      </ul>
                   </p>
+                  <hr>
                   <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      <strong>Familiar in ML and AI implementation :</strong> 
+                    <ul> 
+                        <li>Familiar with tensorflow</li> 
+                        <li>Familiar with Opencv and recognition algorithms for computer vision.</li>
+                        <li>Worked in Self-learning AI using Reinforcement Learning Techniques.</li> 
+                      </ul>
                   </p>
+                  <hr>
+                  <p class="lead">
+                      <strong>Skilled In JavaScript Dynamic WebApp Creation :</strong> 
+                    <ul> 
+                      <li>Skilled in Ajax as well as JQuery.</li>  
+                      <li>Skilled at using Channels and web socket programming for real time data transfer.</li> 
+                      <li>Have worked on JavaScript for client side (browser based) facial recognition and developing browser based QR code reader.</li> 
+                      </ul>
+                  </p>
+
                 </div>
               </div>
             </div>
@@ -175,9 +190,7 @@
             <div class="service-content">
               <h2 class="s-title">Saas Development</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                <!-- can write things -->
               </p>
             </div>
           </div>
@@ -190,10 +203,7 @@
             <div class="service-content">
               <h2 class="s-title">Web Development</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
+                <!-- can write things -->              </p>
             </div>
           </div>
         </div>
@@ -205,9 +215,7 @@
             <div class="service-content">
               <h2 class="s-title">Computer Vision</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                <!-- can write things -->
               </p>
             </div>
           </div>
@@ -220,9 +228,7 @@
             <div class="service-content">
               <h2 class="s-title">Web API</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                <!-- can write things -->
               </p>
             </div>
           </div>
@@ -235,9 +241,7 @@
             <div class="service-content">
               <h2 class="s-title">Database Design</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                <!-- can write things -->
               </p>
             </div>
           </div>
@@ -250,9 +254,7 @@
             <div class="service-content">
               <h2 class="s-title">Data Analysis</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                <!-- can write things -->
               </p>
             </div>
           </div>
@@ -283,7 +285,7 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">2</p>
+              <p class="counter">1.5</p>
               <span class="counter-text">YEARS OF EXPERIENCE</span>
             </div>
           </div>
@@ -294,7 +296,7 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">3</p>
+              <p class="counter">1</p>
               <span class="counter-text">TOTAL CLIENTS</span>
             </div>
           </div>
@@ -305,8 +307,8 @@
               <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">2</p>
-              <span class="counter-text">AWARD WON</span>
+              <p class="counter">100</p>
+              <span class="counter-text">ENERGY LEFT</span>
             </div>
           </div>
         </div>
@@ -329,7 +331,7 @@
                 <div class="col-md-6">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Send Message Us
+                      Get In Touch
                     </h5>
                   </div>
                   <div>
@@ -371,28 +373,23 @@
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
-                      Get in Touch
+                        Let's Start A Project Together
                     </h5>
                   </div>
                   <div class="more-info">
-                    <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore?
+                    <p class="lead"> 
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                      <li><span class="ion-email"></span> contact@example.com</li>
+                      <li><span class="ion-ios-location"></span> 33700, Gairapatan, Pokhara, Gandaki, Nepal</li>
+                      <li><span class="ion-ios-telephone"></span> (977) 98466-22488</li>
+                      <li><span class="ion-email"></span> kabirtamari@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-youtube"></i></span></a></li>
-                      
+                      <li><a href="https://facebook.com/lurayy.newar" target="_blank" ><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
+                      <li><a href="https://github.com/lurayy" target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://www.youtube.com/channel/UCmpeYVSr7HrGN5MUev_a2yA" target="_blank"><span class="ico-circle"><i class="ion-social-youtube"></i></span></a></li> 
                     </ul>
                   </div>
                 </div>
